<resources>
    <string name="app_name">StepsHunter</string>
    <string name="action_logout">Wyloguj</string>

    <string name="tvLatitude">Szerokość geograficzna: </string>
    <string name="tvLongitude">Długość geograficzna: </string>
    <string name="tvLog">Logi:</string>
    <string name="GPSenabled">GPS jest włączony</string>
    <string name="GPSdisabled">GPS jest wyłączony</string>
    <string name="GPSalert">GPS jest wyłączony. Chcesz przejść do ustawień GPS?</string>
    <string name="Settings">Ustawienia</string>
    <string name="Cancel">Anuluj</string>
    <string name="swGPS">GPS</string>
    <string name="swLocation">Szukaj lokalizacji</string>

    <!-- frequency -->
    <string name="frequency_setting">Częstotliwość pomiaru: </string>
    <string name="frequency_batton_set">Ustaw</string>
    <string name="frequency_batton_default">Przywróć domyślną wartość</string>
    <string name="frequency_change_warning">By zmienić wartość wyłącz namierznie.</string>
    <string name="frequency_change_empty_field">Musisz podać wartość.</string>
    <string name="frequency_change_to_low">Podana wartość jest zbyt niska.</string>
    <string name="frequency_change_to_high">Podana wartość jest zbyt wysoka.</string>
    <string name="frequency_change_changed_to">Zmieniono na </string>
    <string name="frequency_change_unit"> sek.</string>
    <string name="frequency_change_restore">Przywrócono </string>
    <string name="OK">OK</string>

    <string name="file_with_gps">huntedGPS</string>
    <string name="notification_title_lost_gps_signal">StepsHunter</string>
    <string name="notification_text_lost_gps_signal">Sygnał GPS został utracony</string>

    <!-- Internal storage -->
    <string name="toast_internal_storage_error">Wystąpił nieoczekiwany problem z pamięcią. Jeśli komunikat powtórzy się, zainstaluj aplikację ponownie</string>
    <string name="json_coordinates_title">data</string>

    <!-- Log messages -->
    <string name="tag_internalStorageFile">InternalStorageFile</string>
    <string name="msg_fileDeletedException">Attempt to remove a nonexistent file</string>

    <string name="LOG_readFrequency">Problem z pobieraniem częstotliwości. Wiadomość błędu: </string>
    <string name="ERROR_readFrequency">Problem z pobieraniem częstotliwości. Wiadomość błędu w logach. </string>


    <!-- Registration form -->
    <string name="registrationActivityTitle">Strona Rejestracji</string>
    <string name="giveUsername">Podaj login:</string>
    <string name="giveEmail">Podaj email:</string>
    <string name="givePassword">Podaj hasło:</string>
    <string name="repeatPassword">Powtórz hasło:</string>
    <string name="registerButton">Rejestruj</string>

    <string name="emptyField">Jedno z pól jest puste. Wypełnij wszystkie pola i spróbuj ponownie.</string>
    <string name="passwordsNotEquals">Podane hasła są różne. Upewnij się, że hasła są takie same i spróbuj ponownie.</string>

    <string name="registrationFailureTitle">Niepowodzenie rejestracji!</string>
    <string name="registrationErrors">Podczas rejestracji wystąpiły pewne błędy:</string>
    <string name="backToLoginActivity">Wróć do strony logowania</string>

    <string name="registrationSuccessTitle">Pomyślnie zarejestrowano!</string>
    <string name="registrationSuccessMessage">Rejestracja przebiegła pomyślnie. Zostałes/aś zalogowany/a. Kliknij przycisk apy przejść do widoku aplikacji.</string>
    <string name="goToApplication">Przejdź do aplikacji</string>

    <!-- Login form -->
    <string name="loginActivityTitle">Strona Logowania</string>
    <string name="loginButton">Loguj</string>
    <string name="noAccountButton">Zarejestruj się</string>

    <string name="loginSuccessTitle">Pomyślnie zalogowano!</string>
    <string name="loginSuccessMessage">Logowanie przebiegło pomyślnie. Zostałes/aś zalogowany/a. Kliknij przycisk apy przejść do widoku aplikacji.</string>

    <string name="loginFailureTitle">Niepowodzenie logowania!</string>
    <string name="loginErrors">Podczas logowania wystąpiły pewne błędy:</string>

    <string name="shared_preferences_user_id">userId</string>

    <!-- Preloader -->
    <string name="preloaderContentDescription">Loading...</string>

    <!-- Server connection -->
    <string name="server_protocol">http</string>
    <string name="server_path">/api/coordinates</string>
    <string name="server_user_login">test</string>
    <string name="server_user_password">test123</string>
    <string name="server_host">dziablo.ddns.net</string>

</resources>
